--- a/krown2.html
+++ b/krown2.html
@@ -10,12 +10,17 @@
 
 <body>
 	<div id="panel">
-<!-- 		<div id="logo"> -->
-			<canvas id="drawKrown" height="100" width="100"></canvas>
-			<div id="krowntext">Golden Krown II</div>
-<!-- 		</div> -->
+		<canvas id="drawKrown" height="100" width="100"></canvas>
+		<div id="krowntext">Golden Krown II</div>
 		<div id="buttonbox">
 			<button id="new-game" class="button button-ok">New Game</button>
+		</div>
+		<div id="userbox">
+			<div id="username">User</div>
+			<div id="scorebox">
+				<div id="whitescore">0</div>
+				<div id="colorscore"></div>
+			</div>
 		</div>
 	</div>
 	<div id="main">
