--- a/krown2.html
+++ b/krown2.html
@@ -14,6 +14,8 @@
 		<div id="krowntext">Golden Krown II</div>
 		<div id="buttonbox">
 			<button id="new-game" class="button button-ok">New Game</button>
+			<button id="new-game" class="button button-cancel">Hall of Fame</button>
+			<button id="new-game" class="button button-yellow">Info</button>
 		</div>
 		<div id="userbox">
 			<div id="username">User</div>
