Hall of Fame support

--- a/krown2.html
+++ b/krown2.html
@@ -15,7 +15,7 @@
 			<div id="krowntext">Golden Krown II</div>
 			<div id="buttonbox">
 				<button id="button-new-game" class="button button-ok">New Game</button>
-				<button id="button-hall-of-fame" class="button button-cancel">Hall of Fame</button>
+				<button id="button-fame" class="button button-cancel">Hall of Fame</button>
 				<button id="button-info" class="button button-yellow">Info</button>
 			</div>
 			<div id="userbox">
