--- a/krown2.html
+++ b/krown2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Golden Krown 2</title>
  	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
  	<script src="jquery.min.js" type="text/javascript"></script>
  	<script src="jquery.animate-colors-min.js" type="text/javascript"></script>
